--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -14,11 +14,11 @@ homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutte
 description = "{{ cookiecutter.project_short_description }}"
 authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
 readme = "README.md"
-{%- if cookiecutter.open_source_license in license_classifiers %}
+{% if cookiecutter.open_source_license in license_classifiers %}
 license =  "{{ cookiecutter.open_source_license }}"
 {% endif -%}
 classifiers=[
-{%- if cookiecutter.open_source_license in license_classifiers %}
+{% if cookiecutter.open_source_license in license_classifiers %}
     '{{ license_classifiers[cookiecutter.open_source_license] }}',
 {%- endif %}
     'Natural Language :: English',
