--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -23,9 +23,7 @@ jobs:
       - name: Unit test with pytest
         run: poetry run pytest
       - name: Check style with flake8 & pylint
-        run: |
-          poetry run flake8 hooks/ tests/
-          poetry run pylint hooks/
+        run: poetry run flake8 hooks/ tests/
       - name: Check format with black
         run: poetry run black --check .
       - name: Check type hinting with mypy
