--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,22 +24,18 @@ include = ["LICENSE"]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+cookiecutter = "^1.7.0"
 pytest = "^5.4.0"
 pytest-cov = "^2.10.0"
 pytest-cookies = "^0.5.0"
 invoke = "^1.4.0"
 pydocstyle = "5.0.0"
-flake8 = "3.8.4"
-flake8-docstrings = "1.5.0"
+flake8 = "^4.0.0"
+flake8-docstrings = "1.6.0"
 flake8-import-order = "0.18.1"
-pep8-naming = "0.11.0"
-flake8-colors = "0.1.6"
-pyflakes = "2.2.0"
-pep8 = "1.7.1"
-mypy = "0.790"
-black = "20.8b1"
-pylint = "^2.6.0"
-cookiecutter = "^1.7.0"
+flake8-colors = "0.1.8"
+mypy = "0.960"
+black = "22.3.0"
 
 [tool.black]
 line-length=100
@@ -56,15 +52,11 @@ exclude = '''
   /(
       {{cookiecutter.project_slug}}
       | .git
+      | .venv
+      | __pycache__
   )/
 )
 '''
-
-[tool.pylint.reports]
-output-format="colorized"
-reports="y"
-include-ids="yes"
-msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
